--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "n8n-nodes-calcslive",
-  "version": "1.0.0",
-  "description": "n8n custom node for CalcsLive calculation API integration",
+  "version": "0.1.0",
+  "description": "Execute unit-aware calculations in your n8n workflows using CalcsLive's powerful physics engine. Supports automatic unit conversions, engineering calculations, and complex mathematical expressions with 64+ unit categories.",
   "keywords": [
     "n8n-community-node-package",
     "n8n",
@@ -9,32 +9,50 @@
     "calculator",
     "physics",
     "units",
-    "conversion"
+    "conversion",
+    "engineering",
+    "mathematics",
+    "automation",
+    "api",
+    "workflow"
   ],
   "license": "MIT",
   "homepage": "https://www.calcs.live",
   "author": {
     "name": "CalcsLive",
-    "email": "don.wen@calcs.live"
+    "email": "don.wen@calcs.live",
+    "url": "https://www.calcs.live"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/calcslive/n8n-nodes-calcslive.git"
   },
+  "bugs": {
+    "url": "https://github.com/calcslive/n8n-nodes-calcslive/issues"
+  },
+  "funding": {
+    "type": "individual",
+    "url": "https://www.calcs.live/pricing"
+  },
   "engines": {
     "node": ">=18.10",
-    "pnpm": ">=7.18"
+    "n8n": ">=0.200.0"
   },
-  "packageManager": "pnpm@7.18.0",
   "main": "index.js",
   "scripts": {
-    "b": "tsc && gulp build:icons",
-    "build": "tsc && gulp build:icons",
+    "b": "npm run build",
+    "build": "npm run clean && tsc && gulp build:icons",
+    "clean": "rimraf dist",
     "dev": "tsc --watch",
     "format": "prettier nodes credentials --write",
-    "lint": "eslint nodes credentials package.json",
-    "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm run build && npm run lint -s"
+    "lint": "eslint \"nodes/**/*.ts\" \"credentials/**/*.ts\"",
+    "lintfix": "eslint \"nodes/**/*.ts\" \"credentials/**/*.ts\" --fix",
+    "test": "echo \"Tests will be added in future versions\" && exit 0",
+    "typecheck": "tsc --noEmit",
+    "prepack": "npm run build",
+    "prepublishOnly": "npm run build && npm run lint && npm run typecheck",
+    "version": "npm run build && git add dist/",
+    "postversion": "git push && git push --tags"
   },
   "files": [
     "dist"
@@ -50,12 +68,14 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.45.0",
     "eslint": "^8.29.0",
     "eslint-plugin-n8n-nodes-base": "^1.11.0",
     "gulp": "^4.0.2",
     "n8n-workflow": "*",
     "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
