--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@calcslive/n8n-nodes-calcslive",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Plug-and-play unit conversion and unit-aware multi-step calculations for n8n workflows. Transform your automation with automatic handling of 540+ units across 64+ categories.",
   "keywords": [
     "n8n-community-node-package",
@@ -47,7 +47,7 @@
     "typecheck": "tsc --noEmit",
     "prepack": "npm run build",
     "prepublishOnly": "npm run build && npm run lint && npm run typecheck",
-    "version": "npm run build && git add dist/",
+    "version": "npm run build",
     "postversion": "git push && git push --tags"
   },
   "files": [
